Added favicons, error pages, and mailchimp template section

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -45,7 +45,11 @@ b, strong {
 }
 
 a {
-  color: #f00;
+  color: #d24040;
+  transition: .3s color;
+}
+a:hover {
+  color: #dc6a6a;
 }
 
 figure {
