--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -36,6 +36,10 @@ body {
   }
 }
 
+.left-text {
+  text-align: left;
+}
+
 .menu-toggle {
   border-radius: 25% 0 0 25%;
   color: #fff;
@@ -105,11 +109,18 @@ body {
     right: 0;
     text-align: center;
     width: 20%;
+
+    .sidebar-open & {
+      left: auto;
+    }
   }
 }
 
 .sidebar-content {
+  overflow: auto;
+
   @media (min-width: $sidebar-breakpoint) {
+    overflow: visible;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -139,6 +150,7 @@ body {
     display: inline-block;
     font-size: 16px;
     padding: 14px 20px;
+    margin: 0;
     text-decoration: none;
     transition: .2s all;
 
@@ -156,12 +168,14 @@ body {
 
   .current {
     background: #000;
-    color: #fff;
+    // border: 1px solid #999;
+    // border-radius: 15px;
+    color: #fff !important;
     pointer-events: none;
 
     @media (min-width: $sidebar-breakpoint) {
       background: #fff;
-      color: #000;
+      color: #000 !important;
       position: relative;
       left: -1px;
       padding-left: 1px;
@@ -203,10 +217,6 @@ body {
 
 .sidebar-group {
   margin: 2em 0 2em;
-}
-
-.sidebar-content {
-  overflow: auto;
 }
 
 .site-width {
@@ -321,12 +331,12 @@ h5 {
     font-size: 1.5em;
     font-weight: 500;
     margin: 3em 0 1em;
-    line-height: 1.5;
+    line-height: 1.6;
   }
 
   h3 {
     font-size: 1.3em;
-    line-height: 1.5;
+    line-height: 1.6;
   }
 
   h4 {
@@ -347,9 +357,11 @@ li {
 }
 
 b, strong {
-  font-weight: 700;
-  background: #ff0;
   color: #000;
+  background: #ff0;
+  font-weight: 700;
+  margin: 0 -5px;
+  padding: 3px 5px;
 }
 
 .reversed b,
@@ -362,6 +374,8 @@ a {
   background: #000;
   color: #fff;
   cursor: pointer;
+  margin: 0 -5px;
+  padding: 3px 5px;
   text-decoration: underline;
 
   &:hover {
@@ -399,7 +413,12 @@ figcaption {
 
 ul {
   list-style: none;
+  margin: 1em 0 2em;
   padding: 0;
+}
+.bullets {
+  list-style: disc;
+  padding-left: 2em;
 }
 
 ul li {
