--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -7,7 +7,14 @@
 
 // modules
 @import "_text";
+@import "_links";
+@import "_images";
 @import "_banner";
-
+@import "_heroimage";
+@import "_callout";
+@import "_site-footer";
+@import "_nav";
+@import "_menu-toggle";
+@import "_sidebar";
 
 
