--- a/app/scss/styles-bak.scss
+++ b/app/scss/styles-bak.scss
@@ -1,7 +1,10 @@
 // @import "../bower_components/normalize-css/normalize";
 
-@import "base/_variables";
-@import "base/_reset";
+// @import "base/_variables";
+// @import "base/_reset";
+
+$white: #fff;
+$black: #000;
 
 img {
   max-width: 100%;
@@ -9,7 +12,7 @@ img {
 }
 
 html {
-  background: #fff;
+  background: $white;
   // padding: 0 0 2em;
 }
 
@@ -22,7 +25,7 @@ html {
 }
 
 body {
-  color: #000;
+  color: $black;
   font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace;
   font-size: 14px;
   line-height: 1.7;
@@ -41,7 +44,7 @@ body {
 
 .menu-toggle {
   border-radius: 25% 0 0 25%;
-  color: #fff;
+  color: $white;
   font-size: 1.5em;
   height: 46px;
   // margin-top: -22px;
@@ -145,7 +148,7 @@ body {
 
   a {
     background: none;
-    color: #000;
+    color: $black;
     display: inline-block;
     font-size: 16px;
     padding: 14px 20px;
@@ -154,8 +157,8 @@ body {
     transition: .2s all;
 
     &:hover {
-      background: #fff;
-      color: #000;
+      background: $white;
+      color: $black;
     }
 
     @media (min-width: $sidebar-breakpoint) {
@@ -166,15 +169,15 @@ body {
   }
 
   .current {
-    background: #000;
+    background: $black;
     // border: 1px solid #999;
     // border-radius: 15px;
-    color: #fff !important;
+    color: $white !important;
     pointer-events: none;
 
     @media (min-width: $sidebar-breakpoint) {
-      background: #fff;
-      color: #000 !important;
+      background: $white;
+      color: $black !important;
       position: relative;
       left: -1px;
       padding-left: 1px;
@@ -187,8 +190,8 @@ body {
     color: #777;
 
     &:hover {
-      background: #fff;
-      color: #000;
+      background: $white;
+      color: $black;
     }
   }
 }
@@ -231,8 +234,8 @@ body {
 }
 
 .reversed {
-  background: #000;
-  color: #fff;
+  background: $black;
+  color: $white;
 }
 
 .spaced {
@@ -357,7 +360,7 @@ li {
 }
 
 b, strong {
-  color: #000;
+  color: $black;
   background: #ff0;
   font-weight: 700;
   margin: 0 -5px;
@@ -366,13 +369,13 @@ b, strong {
 
 .reversed b,
 .reversed strong {
-  // background: #fff;
-  // color: #000;
+  // background: $white;
+  // color: $black;
 }
 
 a {
-  background: #000;
-  color: #fff;
+  background: $black;
+  color: $white;
   cursor: pointer;
   margin: 0 -5px;
   padding: 3px 5px;
@@ -385,12 +388,12 @@ a {
 }
 
 .reversed a {
-  background: #fff;
-  color: #000;
+  background: $white;
+  color: $black;
 
   &:hover {
     background: #0a9e0e;
-    color: #fff;
+    color: $white;
     text-decoration: none;
   }
 }
