Added will-change to fixed elements for better performance

--- a/app/scss/_menu-toggle.scss
+++ b/app/scss/_menu-toggle.scss
@@ -10,6 +10,7 @@
   top: 45%;
   transition: all 0.3s;
   width: 40px;
+  will-change: transform; // moves painting to GPU for better performance
   z-index: 20;
 
   &, &:hover {
