--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -22,8 +22,8 @@ ul, ol {
 
 .site-width {
   margin: 0 auto;
-  max-width: 50em;
-  padding: 0 7%;
+  max-width: 46em;
+  padding: 0 3em;
 }
 
 .site-width--wide {
