--- a/app/scss/_text.scss
+++ b/app/scss/_text.scss
@@ -1,8 +1,12 @@
 
-@mixin font-size($font-size, $line-height) {
-  font-size: $font-size * 1px;
-  font-size: ($font-size / $base-font-size) * 1rem;
-  line-height: $line-height; // keep this on the vertical grid somehow?
+@mixin declare-font-size-in-pixels($pixels) {
+  font-size: $pixels * 1px;
+  font-size: ($pixels / $base-font-size) * 1rem;
+}
+
+@mixin declare-relative-font-size($multiplier) {
+  font-size: $multiplier * $base-font-size * 1px;
+  font-size: $multiplier * 1rem;
 }
 
 html {
@@ -23,50 +27,71 @@ h1,h2,h3,h4,h5,h6,ul,ol,dl,fieldset,p,table,pre,hr {
     margin-bottom: $base-line-height * 1rem;
 }
 
+// headers
+h1, h2, h3 {
+  // check performance painting
+  // does nothing in ie/edge
+  text-rendering: optimizeLegibility;
+}
+
 /* These handle massive type, for less frequently occuring bits of text (e.g. in mastheads and banners). */
-.giga {
-  @include font-size(80, 1.7);
-}
-.mega {
-  @include font-size(64, 1.7);
-}
-.kilo {
-  @include font-size(48, 1.7);
-}
+// .giga {
+//   @include declare-font-size-in-pixels(80);
+//   line-height: 1.7;
+// }
+// .mega {
+//   @include declare-font-size-in-pixels(64);
+//   line-height: 1.7;
+// }
+// .kilo {
+//   @include declare-font-size-in-pixels(48);
+//   line-height: 1.7;
+// }
 
 /* Define headings and their associated classes here. */
 h1,.alpha {
-  @include font-size(25, 1.8);
+  @include declare-font-size-in-pixels(21);
+  line-height: 1.8;
+
+  @media (min-width: $sidebar-breakpoint) {
+    @include declare-font-size-in-pixels(24); // 1.5625
+  }
 }
 h2,.beta {
-  @include font-size(21, 1.8);
+  @include declare-font-size-in-pixels(21); // 1.3125
+  line-height: 1.8;
   text-decoration: underline;
 }
 h3,.gamma {
-  @include font-size(19, 1.8);
+  @include declare-font-size-in-pixels(19); // 1.1875
+  line-height: 1.8;
   text-decoration: underline;
 }
 h4,.delta {
-  @include font-size(14, 1.7);
+  @include declare-font-size-in-pixels(14);
+  line-height: 1.7;
   margin-bottom: 1em;
 }
 h5,.epsilon {
-  @include font-size(13, 1.7);
+  @include declare-font-size-in-pixels(13);
+  line-height: 1.7;
   color: #999;
   margin-bottom: 0.5em;
 }
 h6,.zeta {
-  @include font-size(12, 1.7);
+  @include declare-font-size-in-pixels(12);
+  line-height: 1.7;
 }
 
 /* Smaller-than-body-copy sizes here. */
 small, .milli {
-  @include font-size(12, 1.7);
+  @include declare-font-size-in-pixels(12);
+  line-height: 1.7;
 }
 
 b, strong {
   color: $black;
-  background: #ff0;
+  background: $highlighter;
   font-weight: bold;
   margin: 0 -5px;
   padding: 3px 5px;
