--- a/app/scss/_heroimage.scss
+++ b/app/scss/_heroimage.scss
@@ -1,6 +1,11 @@
 .hero-image {
   left: -2px;
-  margin-bottom: 4em;
-  margin-top: 4em;
+  margin-bottom: 2em;
+  margin-top: 2em;
   position: relative;
+
+  @media (min-width: $sidebar-breakpoint) {
+    margin-bottom: 4em;
+    margin-top: 4em;
+  }
 }
