--- a/app/scss/_links.scss
+++ b/app/scss/_links.scss
@@ -5,4 +5,10 @@ a {
   margin: 0 -5px;
   padding: 3px 5px;
   text-decoration: underline;
+  transition: 0.1s all;
+
+  &:hover {
+    background: #0a9e0e;
+    text-decoration: none;
+  }
 }
