--- a/app/scss/_nav.scss
+++ b/app/scss/_nav.scss
@@ -1,6 +1,5 @@
 .primary-nav {
   list-style: none;
-  // text-align: center;
 }
 
 .primary-nav__item {
@@ -18,11 +17,10 @@
   background: none;
   color: $black;
   display: inline-block;
-  font-size: 16px;
-  padding: 14px 20px;
+  padding: 1em 1.25em;
   margin: 0;
   text-decoration: none;
-  transition: .2s all;
+  transition: 0.2s all;
 
   &:hover {
     background: $white;
@@ -31,8 +29,8 @@
 
   @media (min-width: $sidebar-breakpoint) {
     display: block;
-    font-size: 0.7em;
-    padding: 3px 0;
+    font-size: 0.75em;
+    padding: 0.3em 0;
   }
 }
 
